# Parallelism-of-tetrahedral-meshing-algorithms

./: .gitignore  CMakeLists.txt  README.md  flake.nix  main.cpp  results.txt
hip/: CMakeLists.txt  Makefile  flake.nix  vertex_processor.cu  vertex_processor.h  wa1-task3-hip.cu  wa1-task3-hipified.cu
libigl/: CMakeLists.txt  README.md  TetMesh.cpp  TetMesh.h  flake.nix  main.cpp  processor_main.cpp
libigl/meshes/: 53754.stl
